# otorch

./: .gitignore  LICENSE  README.md  libtorch.odin  libtorch_wrapper.odin  libtorch_wrapper_gen.odin  main.odin  regression
atg/: libtorch_wrapper_api.odin  torch_wrapper_api.odin  torch_wrapper_gen.odin
capi/: CMakeLists.txt  gen_bindings.odin  stb_image_write.h  stubs.cpp  torch_api.cpp  torch_api_gen.cpp
demo/: main.odin
demo/basic/: main.odin
demo/regression/: main.odin
etc/: main.odin
ffi/: gen_bindings.odin  stubs.cpp  torch_api.h  torch_api_gen.cpp  torch_api_gen.h
